Name: dungeont
Version: 0.1.0.0
Cabal-Version: >=1.24
Build-Type: Simple
License: MIT
License-File: LICENSE
Copyright: 2015 Daniel Diaz
Author: Daniel Diaz
Maintainer: diaz_carrete@yahoo.com
Bug-Reports: https://github.com/danidiaz/dungeont/issues
Synopsis: A dungeon monad transformer
             
Category: Control

Extra-Source-Files:
    README.md
    CHANGELOG

Source-Repository head
    Type: git
    Location: git@github.com:danidiaz/dungeont.git

executable dungeon
    main-is: Main.hs
    hs-source-dirs: exe
    default-language: Haskell2010
    ghc-options: -Wall -O2 -threaded 
    build-depends:         
        base          >= 4        && < 5   ,
        brick         >= 0.19              ,
        dungeont

library
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends:
        base          >= 4        && < 5   ,
        transformers  >= 0.5.3.0           ,
        mtl           >= 2.2.1             ,
        bifunctors    >= 5                 ,
        profunctors   >= 5                 ,
        semigroups    >= 0.18              ,
        semigroupoids >= 5.0               ,
        foldl         >= 1.1.5             ,
        comonad       >= 4                 ,
        free          >= 4                 ,         
        void          >= 0.6               ,
        streaming     >= 0.1.4.2
    exposed-modules:
        Dungeon
        Dungeon.Player
        Dungeon.Player.Prelude
    ghc-options: -O2 -Wall
